--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-asgiref == 3.7.2
-Django == 4.2.5
-sqlparse == 0.4.4
-tzdata == 2023.3
-django-allauth == 0.47.0
-# django-crispy-forms == 1.12.0
-gunicorn==21.2.1
-Pillow == 8.2.0
-python-decouple == 3.5
-psycopg2-binary == 2.9.1
-whitenoise == 5.3.0
-mysql-connector-python == 8.0.28
+asgiref==3.7.2
+Django==4.2.5
+mysql-connector-python==8.0.28
+Pillow==10.0.0
+protobuf==4.24.3
+sqlparse==0.4.4
+tzdata==2023.3
